--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ audio::-webkit-media-controls-enclosure {
 
 .songName {
   padding: 7vh;
+  width: 100vw;
   color: rgb(0, 0, 0);
   text-shadow: 0px 0px 5px rgb(255, 255, 255);
   text-align: center;
