--- a/scss/_songs.scss
+++ b/scss/_songs.scss
@@ -1,5 +1,6 @@
 .songName {
     padding: 7vh;
+    width: 100vw;
     color: rgb(0, 0, 0);
     text-shadow: 0px 0px 5px rgb(255, 255, 255);
     text-align: center;
