--- a/css/style.css
+++ b/css/style.css
@@ -6,14 +6,37 @@ audio::-webkit-media-controls-enclosure {
   border-radius: 0;
 }
 
-.songName {
-  padding: 7vh;
-  width: 100vw;
-  color: rgb(0, 0, 0);
-  text-shadow: 0px 0px 5px rgb(255, 255, 255);
+.songCard {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: fit-content;
+  padding: 6px 0px 6px 6px;
+  margin: 6px 0px 6px 6px;
+  border-radius: 2px;
+  background: linear-gradient(170deg, rgba(255, 255, 255, 0.282) 0%, rgba(0, 0, 0, 0) 100%);
+}
+.songCard .songIcon {
+  min-width: 75px;
+  min-height: 75px;
+  border-radius: 1000px;
+  background-repeat: no-repeat;
+  background-position: 0px;
+  background-size: 75px;
+}
+.songCard .songName {
+  font-size: 18px;
+  font-weight: normal;
+  width: 100px;
   text-align: center;
-  font-size: 7vh;
-  font-weight: bolder;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 100px));
+  grid-column-gap: 20px;
+  grid-row-gap: 10px;
+  padding: 10px;
 }
 
 * {
@@ -22,9 +45,34 @@ audio::-webkit-media-controls-enclosure {
   box-sizing: border-box;
   text-decoration: none;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  color: rgb(49, 49, 49);
-  text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.308);
+  color: rgb(224, 224, 224);
+  text-shadow: 0px 0px 2px rgba(255, 255, 255, 0.445);
   list-style-type: none;
+}
+
+body {
+  background-image: url("../assets/images/background.jpg");
+  background-size: 100vw;
+}
+
+header {
+  background: linear-gradient(90deg, rgb(255, 255, 255) 0%, rgba(0, 0, 0, 0) 50%, rgba(0, 212, 255, 0) 100%);
+}
+header h1 {
+  padding: 10px;
+  color: black;
+  text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.445);
+  width: fit-content;
+  cursor: pointer;
+}
+
+.audios {
+  display: none;
+}
+
+.title {
+  background: linear-gradient(120deg, rgba(255, 255, 255, 0.206) 0%, rgba(0, 0, 0, 0) 33%);
+  padding: 6px 0px 6px 20px;
 }
 
 /*# sourceMappingURL=style.css.map */
