--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,14 +1,39 @@
 @import "_audioControls.scss";
-@import "_songs.scss"; 
+@import "_songs.scss";
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: rgb(49, 49, 49);
-    text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.308);
-    list-style-type: none;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  color: rgb(224, 224, 224);
+  text-shadow: 0px 0px 2px rgba(255, 255, 255, 0.445);
+  list-style-type: none;
+}
 
+body {
+  background-image: url("../assets/images/background.jpg");
+  background-size: 100vw;
+}
+
+header {
+  background: linear-gradient(90deg, rgb(255, 255, 255) 0%, rgba(0,0,0,0) 50%, rgba(0,212,255,0) 100%);
+
+  h1 {
+    padding: 10px;
+    color: black;
+    text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.445);
+    width: fit-content;
+    cursor: pointer;
+  }
+}
+
+.audios {
+  display: none;
+}
+
+.title {
+  background: linear-gradient(120deg, rgba(255, 255, 255, 0.206) 0%, rgba(0,0,0,0) 33%);
+  padding: 6px 0px 6px 20px;
+}
