--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .audioControls {
-  width: 100vw;
+  width: 90vw;
 }
 
 audio::-webkit-media-controls-enclosure {
@@ -11,8 +11,7 @@ audio::-webkit-media-controls-enclosure {
   flex-direction: column;
   align-items: center;
   width: fit-content;
-  padding: 6px 0px 6px 6px;
-  margin: 6px 0px 6px 6px;
+  padding: 6px 6px 6px 6px;
   border-radius: 2px;
   background: linear-gradient(170deg, rgba(255, 255, 255, 0.282) 0%, rgba(0, 0, 0, 0) 100%);
 }
@@ -56,7 +55,7 @@ body {
 }
 
 header {
-  background: linear-gradient(90deg, rgb(255, 255, 255) 0%, rgba(0, 0, 0, 0) 50%, rgba(0, 212, 255, 0) 100%);
+  background: linear-gradient(90deg, rgb(255, 255, 255) 0%, rgba(255, 255, 255, 0.3) 100%);
 }
 header h1 {
   padding: 10px;
@@ -71,8 +70,8 @@ header h1 {
 }
 
 .title {
-  background: linear-gradient(120deg, rgba(255, 255, 255, 0.206) 0%, rgba(0, 0, 0, 0) 33%);
-  padding: 6px 0px 6px 20px;
+  background: linear-gradient(120deg, rgba(255, 255, 255, 0.333) 0%, rgba(255, 255, 255, 0) 50%);
+  padding: 6px 0vw 6px 20px;
 }
 
 /*# sourceMappingURL=style.css.map */
