--- a/scss/style.scss
+++ b/scss/style.scss
@@ -18,7 +18,7 @@ body {
 }
 
 header {
-  background: linear-gradient(90deg, rgb(255, 255, 255) 0%, rgba(0,0,0,0) 50%, rgba(0,212,255,0) 100%);
+  background: linear-gradient(90deg, rgb(255, 255, 255) 0%, rgba(255, 255, 255, 0.3) 100%);
 
   h1 {
     padding: 10px;
@@ -34,6 +34,6 @@ header {
 }
 
 .title {
-  background: linear-gradient(120deg, rgba(255, 255, 255, 0.206) 0%, rgba(0,0,0,0) 33%);
-  padding: 6px 0px 6px 20px;
+  background: linear-gradient(120deg, rgba(255, 255, 255, 0.333) 0%, rgba(255, 255, 255, 0) 50%);
+  padding: 6px 0vw 6px 20px;
 }
